--- a/public/InterfaceSegregation/css/theme/whiteDanack.css
+++ b/public/InterfaceSegregation/css/theme/whiteDanack.css
@@ -119,8 +119,10 @@ body {
   margin: 20px auto;
   padding: 5px;
   font-style: italic;
-  background: rgba(255, 255, 255, 0.05);
-  box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.2); }
+  background: rgba(255, 255, 255, 0.95);
+  box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.2);
+  padding: 30px;
+}
 
 .reveal blockquote p:first-child, .reveal blockquote p:last-child {
   display: inline-block; }
