--- a/public/InterfaceSegregation/lib/css/vsdanack.css
+++ b/public/InterfaceSegregation/lib/css/vsdanack.css
@@ -91,3 +91,11 @@ Visual Studio-like style based on original C# coloring by Jason Diamond <jason@d
 .vhdl .hljs-attribute { color: #00b0e8; }
 
 .xml .hljs-attribute { color: #f00; }
+
+.reveal pre {
+  background-color: #ffffff;
+}
+
+pre, .danackCode {
+  background-color: #ffffff;
+}
