--- a/public/ValueCaseForUnitTests/css/theme/whiteDanack.css
+++ b/public/ValueCaseForUnitTests/css/theme/whiteDanack.css
@@ -272,4 +272,7 @@ body {
  * SLIDE NUMBER
  *********************************************/
 .reveal .slide-number {
-  color: #2a76dd; }
+  color: #2a76dd;
+}
+
+
