--- a/public/BackgroundWorkers/lib/css/zenburn_backup.css
+++ b/public/BackgroundWorkers/lib/css/zenburn_backup.css
@@ -7,8 +7,9 @@ based on dark.css by Ivan Sagalaev
 
 .hljs {
   display: block; padding: 0.5em;
-  background: #292929;
-  color: #DCDCDC;
+  /*background: #292929;*/
+  background: #000;
+  color: #f8f8f8;
 }
 
 .hljs-keyword,
@@ -20,7 +21,7 @@ based on dark.css by Ivan Sagalaev
 .hljs-request,
 .hljs-status,
 .clojure .hljs-attribute {
-  color: #E3CEAB;
+  color: #fff6ed;
 }
 
 .django .hljs-template_tag,
@@ -38,7 +39,7 @@ based on dark.css by Ivan Sagalaev
 .dos .hljs-stream,
 .hljs-variable,
 .apache .hljs-sqbracket {
-  color: #EFDCBC;
+  color: #fdeaca;
 }
 
 .dos .hljs-flow,
@@ -72,7 +73,7 @@ based on dark.css by Ivan Sagalaev
 .ruby .hljs-symbol,
 .ruby .hljs-symbol .hljs-string,
 .ruby .hljs-string {
-  color: #DCA3A3;
+  color: #edb4b4;
 }
 
 .diff .hljs-deletion,
@@ -92,7 +93,7 @@ based on dark.css by Ivan Sagalaev
 .apache .hljs-cbracket,
 .tex .hljs-formula,
 .coffeescript .hljs-attribute {
-  color: #CC9393;
+  color: #edb4b4;
 }
 
 .hljs-shebang,
@@ -103,7 +104,7 @@ based on dark.css by Ivan Sagalaev
 .hljs-pi,
 .hljs-doctype {
   /* color: #7F9F7F; */
-  color: #83D383;
+  color: #9ef09e;
 }
 
 .coffeescript .javascript,
@@ -117,8 +118,8 @@ based on dark.css by Ivan Sagalaev
 }
 
 .reveal pre {
-  background: #292929;
+  background: #000000;
 }
 pre, .danackCode {
-  background: #292929;
+  background: #000000;
 }
